# class-manager-api

./: .env.development  Dockerfile  README.md  entrypoint.py  pyproject.toml  requirements.txt  start-development.sh
adapters/libs/: bcrypt.py
adapters/repositories/: lecturer_repository.py  schedule_repository.py  student_repository.py  user_repository.py
application/usecases/: create_lecturer.py  create_schedule.py  create_student.py  create_user.py  get_schedule_summary.py  sign_in.py  users_me.py
domain/: enums.py  schemas.py
domain/entities/: lecturer.py  pagination.py  schedule.py  sign_in.py  student.py  user.py
domain/interfaces/: lecturer_repository.py  schedule_repository.py  student_repository.py  user_repository.py
infra/databases/: mongodatabase.py
infra/docker/: compose-dev.yaml
tests/integration/auth/: test_sign_in.py  test_sign_up.py
web/: dependencies.py  http_helper.py
web/app/: lecturers.py  schedules.py  students.py  users.py
web/auth/: auth.py
