[project]
name = "class-manager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas emanoel",email = "lucws2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "motor[all] (>=3.7.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
